--- a/css/styles.css
+++ b/css/styles.css
@@ -515,6 +515,84 @@ ul{
     text-transform: uppercase;
     color: #FFFFFF;
 }
+.subscribe-box{
+    display: block;
+    margin-left: auto;
+}
+.subscribe-text{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    padding-bottom: 20px;
+}
+.subscribe-form{
+    display: flex;
+}
+.subscribe-input{
+    margin-right: 12px;
+    padding: 15px 16px;
+    width: 358px;
+    height: 50px;
+    background-color: transparent;
+    color: #fff;
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+
+    letter-spacing: 0.03em;
+
+    color: rgba(255, 255, 255, 0.6);
+
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-btn{
+    cursor: pointer;
+    width: 200px;
+    height: 50px;
+
+    background: #2196F3;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.subscribe-btn:hover,
+.subscribe-btn:focus{
+    background-color: var(--animation-button);
+}
+.subscribe-btn-text{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+
+    display: flex;
+    align-items: center;
+    text-align: center;
+    letter-spacing: 0.06em;
+
+    color: #FFFFFF;
+    margin-right: 10px;
+}
+.subscribe-btn-icon{
+    height: 24px;
+    width: 24px;
+    fill: #FFFFFF;
+}
 .backdrop{
     position: fixed;
     top: 0;
@@ -534,18 +612,17 @@ ul{
     pointer-events: none;  
 }
 .modal{
-    z-index: 100;
     position: absolute;
+    padding: 40px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    background: #fff;
-
-    width: 528px;
     height: 581px;
-
-    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    width: 528px;
+    background-color: #FFFFFF;
+    box-shadow: 0px 1px 3px rgb(0 0 0 / 12%), 0px 1px 1px rgb(0 0 0 / 14%), 0px 2px 1px rgb(0 0 0 / 20%);
     border-radius: 4px;
+    z-index: 100;
 }
 .modal-close-btn{
     justify-content: center;
@@ -561,6 +638,160 @@ ul{
     padding: 0%;
     cursor: pointer;
     margin: 8px;
+}
+.modal-text{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 23px;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: #212121;
+    margin-bottom: 12px;
+}
+.modal-input{
+    width: 100%;
+    height: 40px;
+    padding: 12px 15px 12px 42px;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    cursor: pointer;
+}
+.modal-item:not(:last-child) {
+    position: relative;
+    margin-bottom: 10px;
+}
+.modal-item:last-child {
+    margin-bottom: 20px;
+}
+.modal-label-title{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 14px; 
+    letter-spacing: 0.01em;
+    color: #757575;
+    padding-bottom: 4px;
+}
+.modal-icon{
+    position: absolute;
+    top: 55%;
+    left: 12px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: #212121;
+}
+.modal-com{
+    resize: none;
+    width: 100%;
+    height: 120px;
+    padding: 12px 16px;
+    color: var(--main-text-color);
+    background-color: transparent;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-com::placeholder {
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.01em;
+    color: rgba(117, 117, 117, 0.5);
+}
+.modal-input:focus,
+.modal-com:focus {
+    outline: transparent;
+    border-color: #2196F3;
+}
+.modal-input:focus +.modal-icon {
+    fill: #2196F3;
+}
+.visually-hidden {
+    visibility: hidden;
+}
+.checkbox-label{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 30px;
+}
+.checkbox{
+    position: absolute;
+    width: 1px;
+    height: 1px;
+    margin: -1px;
+    border: 0;
+    padding: 0;
+    white-space: nowrap;
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);
+    overflow: hidden;
+}
+.checkbox-text{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: #757575;
+}
+.modal-check:checked + .form-icon-check{
+    border-color: var(--animation-color);
+    background-color: var(--animation-color);
+}
+.form-icon-check{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-right: 8px;
+    width: 16px;
+    height: 15px;
+    border: 1px solid #000000;
+    box-shadow: 0px 4px 4px rgb(0 0 0 / 25%);
+    border-radius: 1px;
+    background-color: #FFFFFF;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.checkbox-link{
+    text-decoration-line: underline;
+    color: var(--animation-color);
+}
+.icon-check{
+    fill: #FFFFFF;
+}
+.btn-checkbox{
+    width: 200px;
+    height: 50px;
+    margin: 0 124px;
+    background: #188CE8;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    border: none;
+    cursor: pointer;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.btn-checkbox:hover{
+    background-color: var(--animation-color);
+}
+.form-btn-text{
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.88;
+    display: flex;
+    align-items: center;
+    text-align: center;
+    justify-content: center;
+    letter-spacing: 0.06em;
+    color: #FFFFFF;
 }
 .portfolio{
     padding-top: 94px;
